bindings/python/whisper_cpp_wrapper.py


# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 524
if _libs["whisper"].has("whisper_context_default_params_by_ref", "cdecl"):
    whisper_context_default_params_by_ref = _libs["whisper"].get("whisper_context_default_params_by_ref", "cdecl")
    whisper_context_default_params_by_ref.argtypes = []
    whisper_context_default_params_by_ref.restype = POINTER(struct_whisper_context_params)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 525
if _libs["whisper"].has("whisper_context_default_params", "cdecl"):
    whisper_context_default_params = _libs["whisper"].get("whisper_context_default_params", "cdecl")
    whisper_context_default_params.argtypes = []
    whisper_context_default_params.restype = struct_whisper_context_params

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 526
if _libs["whisper"].has("whisper_full_default_params_by_ref", "cdecl"):
    whisper_full_default_params_by_ref = _libs["whisper"].get("whisper_full_default_params_by_ref", "cdecl")
    whisper_full_default_params_by_ref.argtypes = [enum_whisper_sampling_strategy]
    whisper_full_default_params_by_ref.restype = POINTER(struct_whisper_full_params)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 527
if _libs["whisper"].has("whisper_full_default_params", "cdecl"):
    whisper_full_default_params = _libs["whisper"].get("whisper_full_default_params", "cdecl")
    whisper_full_default_params.argtypes = [enum_whisper_sampling_strategy]
    whisper_full_default_params.restype = struct_whisper_full_params

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 532
if _libs["whisper"].has("whisper_full", "cdecl"):
    whisper_full = _libs["whisper"].get("whisper_full", "cdecl")
    whisper_full.argtypes = [POINTER(struct_whisper_context), struct_whisper_full_params, POINTER(c_float), c_int]
    whisper_full.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 538
if _libs["whisper"].has("whisper_full_with_state", "cdecl"):
    whisper_full_with_state = _libs["whisper"].get("whisper_full_with_state", "cdecl")
    whisper_full_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), struct_whisper_full_params, POINTER(c_float), c_int]
    whisper_full_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 550
if _libs["whisper"].has("whisper_full_parallel", "cdecl"):
    whisper_full_parallel = _libs["whisper"].get("whisper_full_parallel", "cdecl")
    whisper_full_parallel.argtypes = [POINTER(struct_whisper_context), struct_whisper_full_params, POINTER(c_float), c_int, c_int]
    whisper_full_parallel.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 559
if _libs["whisper"].has("whisper_full_n_segments", "cdecl"):
    whisper_full_n_segments = _libs["whisper"].get("whisper_full_n_segments", "cdecl")
    whisper_full_n_segments.argtypes = [POINTER(struct_whisper_context)]
    whisper_full_n_segments.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 560
if _libs["whisper"].has("whisper_full_n_segments_from_state", "cdecl"):
    whisper_full_n_segments_from_state = _libs["whisper"].get("whisper_full_n_segments_from_state", "cdecl")
    whisper_full_n_segments_from_state.argtypes = [POINTER(struct_whisper_state)]
    whisper_full_n_segments_from_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 563
if _libs["whisper"].has("whisper_full_lang_id", "cdecl"):
    whisper_full_lang_id = _libs["whisper"].get("whisper_full_lang_id", "cdecl")
    whisper_full_lang_id.argtypes = [POINTER(struct_whisper_context)]
    whisper_full_lang_id.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 566
if _libs["whisper"].has("whisper_full_lang_id_from_state", "cdecl"):
    whisper_full_lang_id_from_state = _libs["whisper"].get("whisper_full_lang_id_from_state", "cdecl")
    whisper_full_lang_id_from_state.argtypes = [POINTER(struct_whisper_state)]
    whisper_full_lang_id_from_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 569
if _libs["whisper"].has("whisper_full_get_segment_t0", "cdecl"):
    whisper_full_get_segment_t0 = _libs["whisper"].get("whisper_full_get_segment_t0", "cdecl")
    whisper_full_get_segment_t0.argtypes = [POINTER(struct_whisper_context), c_int]
    whisper_full_get_segment_t0.restype = c_int64

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 570
if _libs["whisper"].has("whisper_full_get_segment_t0_from_state", "cdecl"):
    whisper_full_get_segment_t0_from_state = _libs["whisper"].get("whisper_full_get_segment_t0_from_state", "cdecl")
    whisper_full_get_segment_t0_from_state.argtypes = [POINTER(struct_whisper_state), c_int]
    whisper_full_get_segment_t0_from_state.restype = c_int64

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 572
if _libs["whisper"].has("whisper_full_get_segment_t1", "cdecl"):
    whisper_full_get_segment_t1 = _libs["whisper"].get("whisper_full_get_segment_t1", "cdecl")
    whisper_full_get_segment_t1.argtypes = [POINTER(struct_whisper_context), c_int]
    whisper_full_get_segment_t1.restype = c_int64

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 573
if _libs["whisper"].has("whisper_full_get_segment_t1_from_state", "cdecl"):
    whisper_full_get_segment_t1_from_state = _libs["whisper"].get("whisper_full_get_segment_t1_from_state", "cdecl")
    whisper_full_get_segment_t1_from_state.argtypes = [POINTER(struct_whisper_state), c_int]
    whisper_full_get_segment_t1_from_state.restype = c_int64

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 576
if _libs["whisper"].has("whisper_full_get_segment_speaker_turn_next", "cdecl"):
    whisper_full_get_segment_speaker_turn_next = _libs["whisper"].get("whisper_full_get_segment_speaker_turn_next", "cdecl")
    whisper_full_get_segment_speaker_turn_next.argtypes = [POINTER(struct_whisper_context), c_int]
    whisper_full_get_segment_speaker_turn_next.restype = c_bool

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 577
if _libs["whisper"].has("whisper_full_get_segment_speaker_turn_next_from_state", "cdecl"):
    whisper_full_get_segment_speaker_turn_next_from_state = _libs["whisper"].get("whisper_full_get_segment_speaker_turn_next_from_state", "cdecl")
    whisper_full_get_segment_speaker_turn_next_from_state.argtypes = [POINTER(struct_whisper_state), c_int]
    whisper_full_get_segment_speaker_turn_next_from_state.restype = c_bool

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 580
if _libs["whisper"].has("whisper_full_get_segment_text", "cdecl"):
    whisper_full_get_segment_text = _libs["whisper"].get("whisper_full_get_segment_text", "cdecl")
    whisper_full_get_segment_text.argtypes = [POINTER(struct_whisper_context), c_int]
    whisper_full_get_segment_text.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 581
if _libs["whisper"].has("whisper_full_get_segment_text_from_state", "cdecl"):
    whisper_full_get_segment_text_from_state = _libs["whisper"].get("whisper_full_get_segment_text_from_state", "cdecl")
    whisper_full_get_segment_text_from_state.argtypes = [POINTER(struct_whisper_state), c_int]
    whisper_full_get_segment_text_from_state.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 584
if _libs["whisper"].has("whisper_full_n_tokens", "cdecl"):
    whisper_full_n_tokens = _libs["whisper"].get("whisper_full_n_tokens", "cdecl")
    whisper_full_n_tokens.argtypes = [POINTER(struct_whisper_context), c_int]
    whisper_full_n_tokens.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 585
if _libs["whisper"].has("whisper_full_n_tokens_from_state", "cdecl"):
    whisper_full_n_tokens_from_state = _libs["whisper"].get("whisper_full_n_tokens_from_state", "cdecl")
    whisper_full_n_tokens_from_state.argtypes = [POINTER(struct_whisper_state), c_int]
    whisper_full_n_tokens_from_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 588
if _libs["whisper"].has("whisper_full_get_token_text", "cdecl"):
    whisper_full_get_token_text = _libs["whisper"].get("whisper_full_get_token_text", "cdecl")
    whisper_full_get_token_text.argtypes = [POINTER(struct_whisper_context), c_int, c_int]
    whisper_full_get_token_text.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 589
if _libs["whisper"].has("whisper_full_get_token_text_from_state", "cdecl"):
    whisper_full_get_token_text_from_state = _libs["whisper"].get("whisper_full_get_token_text_from_state", "cdecl")
    whisper_full_get_token_text_from_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), c_int, c_int]
    whisper_full_get_token_text_from_state.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 591
if _libs["whisper"].has("whisper_full_get_token_id", "cdecl"):
    whisper_full_get_token_id = _libs["whisper"].get("whisper_full_get_token_id", "cdecl")
    whisper_full_get_token_id.argtypes = [POINTER(struct_whisper_context), c_int, c_int]
    whisper_full_get_token_id.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 592
if _libs["whisper"].has("whisper_full_get_token_id_from_state", "cdecl"):
    whisper_full_get_token_id_from_state = _libs["whisper"].get("whisper_full_get_token_id_from_state", "cdecl")
    whisper_full_get_token_id_from_state.argtypes = [POINTER(struct_whisper_state), c_int, c_int]
    whisper_full_get_token_id_from_state.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 596
if _libs["whisper"].has("whisper_full_get_token_data", "cdecl"):
    whisper_full_get_token_data = _libs["whisper"].get("whisper_full_get_token_data", "cdecl")
    whisper_full_get_token_data.argtypes = [POINTER(struct_whisper_context), c_int, c_int]
    whisper_full_get_token_data.restype = whisper_token_data

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 597
if _libs["whisper"].has("whisper_full_get_token_data_from_state", "cdecl"):
    whisper_full_get_token_data_from_state = _libs["whisper"].get("whisper_full_get_token_data_from_state", "cdecl")
    whisper_full_get_token_data_from_state.argtypes = [POINTER(struct_whisper_state), c_int, c_int]
    whisper_full_get_token_data_from_state.restype = whisper_token_data

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 600
if _libs["whisper"].has("whisper_full_get_token_p", "cdecl"):
    whisper_full_get_token_p = _libs["whisper"].get("whisper_full_get_token_p", "cdecl")
    whisper_full_get_token_p.argtypes = [POINTER(struct_whisper_context), c_int, c_int]
    whisper_full_get_token_p.restype = c_float

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 601
if _libs["whisper"].has("whisper_full_get_token_p_from_state", "cdecl"):
    whisper_full_get_token_p_from_state = _libs["whisper"].get("whisper_full_get_token_p_from_state", "cdecl")
    whisper_full_get_token_p_from_state.argtypes = [POINTER(struct_whisper_state), c_int, c_int]
    whisper_full_get_token_p_from_state.restype = c_float

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 607
if _libs["whisper"].has("whisper_bench_memcpy", "cdecl"):
    whisper_bench_memcpy = _libs["whisper"].get("whisper_bench_memcpy", "cdecl")
    whisper_bench_memcpy.argtypes = [c_int]
    whisper_bench_memcpy.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 608
if _libs["whisper"].has("whisper_bench_memcpy_str", "cdecl"):
    whisper_bench_memcpy_str = _libs["whisper"].get("whisper_bench_memcpy_str", "cdecl")
    whisper_bench_memcpy_str.argtypes = [c_int]
    whisper_bench_memcpy_str.restype = c_char_p
